--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <html>
+  <head><title>Heart of the Gods</title></head>
   <body>
     <style>
       body {
         background: #333;
         margin: 0px;
         font-family: Arial, Helvetica, sans-serif;
+        overflow: hidden;
       }
       canvas {
         border: 1px solid white;
